--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,32 @@ button:hover,button:active,button:focus{
 	height: 100vh;
 }
 
+
+.theQuestion{
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  color: #fff;
+}
+.theQuestion .questItem{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+    align-items: center;
+}
+.theQuestion .card {
+    background-color: #fff;
+    border: none;
+    border-radius: .625rem;
+    box-shadow: 0 0.46875rem 2.1875rem rgba(90,97,105,.1), 0 0.9375rem 1.40625rem rgba(90,97,105,.1), 0 0.25rem 0.53125rem rgba(90,97,105,.12), 0 0.125rem 0.1875rem rgba(90,97,105,.1);
+    color: #212529;
+}
+.bg1{background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);}
+.bg2{background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);}
+.bg3{background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);}
+.bg4{background-image: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);}
+.bg5{background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);}
+
 @-webkit-keyframes AnimationName {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
